k8s/istio-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
spec:
  mtls:
    mode: STRICT


# apiVersion: security.istio.io/v1
# kind: PeerAuthentication
# metadata:
#   name: datadog-mtls
#   namespace: default
# spec:
#   selector:
#     matchLabels:
#       app: datadog-agent
#   mtls:
#     mode: PERMISSIVE
