k8s/datadog-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "7"
    meta.helm.sh/release-name: datadog-agent
    meta.helm.sh/release-namespace: default
    sidecar.istio.io/inject: "false"
  creationTimestamp: "2025-02-19T06:52:10Z"
  generation: 7
  labels:
    app.kubernetes.io/component: agent
    app.kubernetes.io/instance: datadog-agent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: datadog-agent
    app.kubernetes.io/version: "7"
    helm.sh/chart: datadog-3.90.5
  name: datadog-agent
  namespace: default
  resourceVersion: "154125"
  uid: c75a10b0-dc72-43cf-8be8-174427ae0210
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: datadog-agent
  template:
    metadata:
      annotations:
        checksum/api_key: 87d566bceddf94330818a4b455fc2eca46f5d62fbf809be33d99c917e77f40b2
        checksum/autoconf-config: 74234e98afe7498fb5daf1f36ac2d78acc339464f950703b8c019892f982b90b
        checksum/checksd-config: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/clusteragent_token: ee6c2eb7917b34571d9aaec71ddd5620bb1913b7e16058c541647dd0b2961531
        checksum/confd-config: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/install_info: bfa1a9961bc2b0b3cf20dbb6519106ef413f7b8bfaa233891ca468f10aa6c8a6
        kubectl.kubernetes.io/restartedAt: "2025-02-19T07:58:50Z"
      creationTimestamp: null
      labels:
        admission.datadoghq.com/enabled: "false"
        app: datadog-agent
        app.kubernetes.io/component: agent
        app.kubernetes.io/instance: datadog-agent
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: datadog-agent
      name: datadog-agent
    spec:
      affinity: {}
      automountServiceAccountToken: true
      containers:
      - command:
        - agent
        - run
        image: gcr.io/datadoghq/agent:7.62.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /live
            port: 5555
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        name: agent
        ports:
        - containerPort: 8125
          name: dogstatsdport
          protocol: UDP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /ready
            port: 5555
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /startup
            port: 5555
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: log-config
          mountPath: /etc/datadog-agent/conf.d/istio.d
          readOnly: true
        - mountPath: /var/log/datadog
          name: logdatadog
        - mountPath: /etc/datadog-agent/install_info
          name: installinfo
          readOnly: true
          subPath: install_info
        - mountPath: /tmp
          name: tmpdir
        - mountPath: /host/etc/os-release
          name: os-release-file
          readOnly: true
        - mountPath: /etc/datadog-agent
          name: config
        - mountPath: /etc/datadog-agent/auth
          name: auth-token
        - mountPath: /host/var/run
          mountPropagation: None
          name: runtimesocketdir
          readOnly: true
        - mountPath: /var/run/datadog
          name: dsdsocket
        - mountPath: /host/proc
          mountPropagation: None
          name: procdir
          readOnly: true
        - mountPath: /host/sys/fs/cgroup
          mountPropagation: None
          name: cgroups
          readOnly: true
        - mountPath: /etc/passwd
          name: passwd
          readOnly: true
        - mountPath: /opt/datadog-agent/run
          mountPropagation: None
          name: pointerdir
        - mountPath: /var/log/pods
          mountPropagation: None
          name: logpodpath
          readOnly: true
        - mountPath: /var/log/containers
          mountPropagation: None
          name: logscontainerspath
          readOnly: true
        - mountPath: /var/lib/docker/containers
          mountPropagation: None
          name: logdockercontainerpath
          readOnly: true
      - command:
        - trace-agent
        - -config=/etc/datadog-agent/datadog.yaml
        image: gcr.io/datadoghq/agent:7.62.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: 8126
          timeoutSeconds: 5
        name: trace-agent
        ports:
        - containerPort: 8126
          name: traceport
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/datadog-agent
          name: config
          readOnly: true
        - mountPath: /var/log/datadog
          name: logdatadog
        - mountPath: /etc/datadog-agent/auth
          name: auth-token
          readOnly: true
        - mountPath: /host/proc
          mountPropagation: None
          name: procdir
          readOnly: true
        - mountPath: /host/sys/fs/cgroup
          mountPropagation: None
          name: cgroups
          readOnly: true
        - mountPath: /tmp
          name: tmpdir
        - mountPath: /var/run/datadog
          name: dsdsocket
        - mountPath: /host/var/run
          mountPropagation: None
          name: runtimesocketdir
          readOnly: true
      dnsPolicy: ClusterFirst
      hostPID: true
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      serviceAccount: datadog-agent
      serviceAccountName: datadog-agent
      terminationGracePeriodSeconds: 30
      volumes:
      - name: log-config
        configMap:
          name: datadog-istio-logs
      - emptyDir: {}
        name: auth-token
      - configMap:
          defaultMode: 420
          name: datadog-agent-installinfo
        name: installinfo
      - emptyDir: {}
        name: config
      - emptyDir: {}
        name: logdatadog
      - emptyDir: {}
        name: tmpdir
      - emptyDir: {}
        name: s6-run
      - hostPath:
          path: /proc
          type: ""
        name: procdir
      - hostPath:
          path: /sys/fs/cgroup
          type: ""
        name: cgroups
      - hostPath:
          path: /etc/os-release
          type: ""
        name: os-release-file
      - hostPath:
          path: /var/run/datadog/
          type: DirectoryOrCreate
        name: dsdsocket
      - hostPath:
          path: /var/run/datadog/
          type: DirectoryOrCreate
        name: apmsocket
      - hostPath:
          path: /etc/passwd
          type: ""
        name: passwd
      - hostPath:
          path: /var/run
          type: ""
        name: runtimesocketdir
      - hostPath:
          path: /var/lib/datadog-agent/logs
          type: ""
        name: pointerdir
      - hostPath:
          path: /var/log/pods
          type: ""
        name: logpodpath
      - hostPath:
          path: /var/log/containers
          type: ""
        name: logscontainerspath
      - hostPath:
          path: /var/lib/docker/containers
          type: ""
        name: logdockercontainerpath
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 10%
    type: RollingUpdate
status:
  currentNumberScheduled: 1
  desiredNumberScheduled: 1
  numberMisscheduled: 0
  numberReady: 0
  numberUnavailable: 1
  observedGeneration: 7
  updatedNumberScheduled: 1
