k8s/service-c-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
      - name: service-c
        image: tarang412/service-c:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
spec:
  type: ClusterIP
  selector:
    app: service-c
  ports:
    - port: 8083
      targetPort: 8083
