k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-a-gateway
  namespace: istio-system  # 👈 Ensure it is deployed in istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
  - "*"
  gateways:
  - service-a-gateway
  http:
  - match:
    - uri:
        prefix: /products
    route:
    - destination:
        host: service-a
        port:
          number: 8082
