k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
    - "*"  # Can be a specific domain or "*" for all
  gateways:
    - service-a-gateway  # Links to a Gateway
  http:
    - match:
        - uri:
            prefix: /products  # Route all "/products" requests
      route:
        - destination:
            host: service-a  # Send requests to "service-a"
            port:
              number: 8082
