k8s/service-b-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
  namespace: default
spec:
  hosts:
  - service-b.default.svc.cluster.local  # Internal service
  http:
  - match:
    - uri:
        prefix: /products
    route:
    - destination:
        host: service-b.default.svc.cluster.local
        port:
          number: 8081
